--- a/index.html
+++ b/index.html
@@ -1,33 +1,45 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- TODO: Set the document title to the name of your application -->
-    <title>NumeroInsight - Discover Your Numerology</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet" />
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
 
-    <!-- TODO: Update og:title to match your application name -->
-    <meta property="og:title" content="Lovable App" />
-    <meta property="og:description" content="Lovable Generated Project" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
+    rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet" />
+  <!-- TODO: Set the document title to the name of your application -->
+  <title>NumGuru - Personalized Pythagorean Numerology & Cosmic Insights</title>
+  <meta name="description"
+    content="Unlock the secrets of your life with NumGuru. Get personalized Pythagorean numerology reports, discover your life path, and align with your cosmic frequencies." />
+  <meta name="keywords"
+    content="numerology, life path number, pythagorean numerology, cosmic insights, spiritual guidance, destiny report" />
+  <meta name="author" content="NumGuru" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-  </head>
+  <!-- Google Search Console Verification -->
+  <meta name="google-site-verification" content="x1RFEsOGjv3BVbvj64tronkCGGXpAMMvpo7cJuzPP_w" />
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://numguru.online/" />
+  <meta property="og:title" content="NumGuru - Discover Your Cosmic Blueprint" />
+  <meta property="og:description"
+    content="Detailed numerology reports and mystical insights to navigate your life's journey." />
+  <meta property="og:image" content="https://numguru.online/og-image.png" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://numguru.online/" />
+  <meta property="twitter:title" content="NumGuru - Discover Your Cosmic Blueprint" />
+  <meta property="twitter:description"
+    content="Detailed numerology reports and mystical insights to navigate your life's journey." />
+  <meta property="twitter:image" content="https://numguru.online/og-image.png" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
