19 jan re-update

--- a/index.html
+++ b/index.html
@@ -9,31 +9,66 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
     rel="stylesheet" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <!-- TODO: Set the document title to the name of your application -->
-  <title>NumGuru - Personalized Pythagorean Numerology & Cosmic Insights</title>
+  <title>NumGuru - Discover Your Life Purpose Through Pythagorean Numerology</title>
   <meta name="description"
-    content="Unlock the secrets of your life with NumGuru. Get personalized Pythagorean numerology reports, discover your life path, and align with your cosmic frequencies." />
+    content="NumGuru helps you unlock your true potential using ancient Pythagorean numerology. Get your free life path analysis or a premium cosmic report today. Start your journey of self-discovery." />
   <meta name="keywords"
-    content="numerology, life path number, pythagorean numerology, cosmic insights, spiritual guidance, destiny report" />
+    content="NumGuru, numerology online, life path number, destiny report, cosmic frequencies, spiritual awakening, Pythagorean numbers" />
   <meta name="author" content="NumGuru" />
 
   <!-- Google Search Console Verification -->
   <meta name="google-site-verification" content="x1RFEsOGjv3BVbvj64tronkCGGXpAMMvpo7cJuzPP_w" />
 
+  <!-- Structured Data (JSON-LD) for Google Search Appearance -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "name": "NumGuru",
+    "alternateName": ["Numerology Guru", "Num Guru"],
+    "url": "https://numguru.online/",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://numguru.online/blog?s={search_term_string}",
+      "query-input": "required name=search_term_string"
+    },
+    "hasPart": [
+      {
+        "@type": "WebPage",
+        "name": "Wisdom Blog",
+        "url": "https://numguru.online/blog"
+      },
+      {
+        "@type": "WebPage",
+        "name": "Free Numerology Report",
+        "url": "https://numguru.online/#free-sample"
+      },
+      {
+        "@type": "WebPage",
+        "name": "Premium Cosmic Blueprint",
+        "url": "https://numguru.online/#premium-report"
+      }
+    ]
+  }
+  </script>
+
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://numguru.online/" />
-  <meta property="og:title" content="NumGuru - Discover Your Cosmic Blueprint" />
+  <meta property="og:site_name" content="NumGuru" />
+  <meta property="og:title" content="NumGuru - Your Personal Cosmic Blueprint" />
   <meta property="og:description"
-    content="Detailed numerology reports and mystical insights to navigate your life's journey." />
+    content="Unlock your true potential with the power of numbers. Accurate Pythagorean numerology analysis for your life path." />
   <meta property="og:image" content="https://numguru.online/og-image.png" />
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
   <meta property="twitter:url" content="https://numguru.online/" />
-  <meta property="twitter:title" content="NumGuru - Discover Your Cosmic Blueprint" />
+  <meta property="twitter:title" content="NumGuru - Your Personal Cosmic Blueprint" />
   <meta property="twitter:description"
-    content="Detailed numerology reports and mystical insights to navigate your life's journey." />
+    content="Unlock your true potential with the power of numbers. Accurate Pythagorean numerology analysis." />
   <meta property="twitter:image" content="https://numguru.online/og-image.png" />
 </head>
 
