19 jan re-update

--- a/index.html
+++ b/index.html
@@ -73,7 +73,10 @@
 </head>
 
 <body>
-  <div id="root"></div>
+  <div id="root">
+    <!-- Fallback content for SEO bots -->
+    <h1 style="display:none;">NumGuru - Personal Pythagorean Numerology Analysis & Cosmic Reports</h1>
+  </div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
 
