--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     rel="stylesheet" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet" />
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="icon" type="image/png" href="/favicon.svg" />
+  <link rel="apple-touch-icon" href="/favicon.svg" />
   <!-- TODO: Set the document title to the name of your application -->
   <title>NumGuru - Discover Your Life Purpose Through Pythagorean Numerology</title>
   <meta name="description"
