29 jan site map update

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     content="NumGuru helps you unlock your true potential using ancient Pythagorean numerology. Get your free life path analysis or a premium cosmic report today. Start your journey of self-discovery." />
   <meta name="keywords"
     content="NumGuru, numerology online, life path number, destiny report, cosmic frequencies, spiritual awakening, Pythagorean numbers" />
+  <link rel="canonical" href="https://numguru.online/" />
   <meta name="author" content="NumGuru" />
 
   <!-- Google Search Console Verification -->
