2 feb update icon issue

--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
     rel="stylesheet" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet" />
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-  <link rel="icon" type="image/png" href="/favicon.svg" />
-  <link rel="apple-touch-icon" href="/favicon.svg" />
+  <link rel="icon" type="image/svg+xml" href="/numguru-logo.svg?v=2" />
+  <link rel="shortcut icon" href="/numguru-logo.svg?v=2" />
+  <link rel="apple-touch-icon" href="/numguru-logo.svg?v=2" />
+  <link rel="mask-icon" href="/numguru-logo.svg?v=2" color="#EAB308" />
+  <link rel="manifest" href="/manifest.json" />
   <!-- TODO: Set the document title to the name of your application -->
   <title>NumGuru - Discover Your Life Purpose Through Pythagorean Numerology</title>
   <meta name="description"
