--- a/index.html
+++ b/index.html
@@ -19,10 +19,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
     rel="stylesheet" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet" />
-  <link rel="icon" type="image/svg+xml" href="/numguru-logo.svg?v=2" />
-  <link rel="shortcut icon" href="/numguru-logo.svg?v=2" />
-  <link rel="apple-touch-icon" href="/numguru-logo.svg?v=2" />
-  <link rel="mask-icon" href="/numguru-logo.svg?v=2" color="#EAB308" />
+  <!-- Browser Tab Icon (Animated SVG) -->
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+
+  <!-- Google Search & Mobile Icon (Static PNG) -->
+  <link rel="icon" type="image/png" href="/favicon.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="/favicon.png" sizes="192x192" />
+  <link rel="shortcut icon" href="/favicon.png" />
+  <link rel="apple-touch-icon" href="/favicon.png" />
   <link rel="manifest" href="/manifest.json" />
   <!-- TODO: Set the document title to the name of your application -->
   <title>NumGuru - Discover Your Life Purpose Through Pythagorean Numerology</title>
